Squashed commit of the following:
commit b2937bbf9cb5788ee228b299e6bce1cf17bc07f7
Author: sunney-x <sanishubitidze@live.com>
Date:   Sun Jun 20 22:05:12 2021 +0400

    dev commit

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,5 @@
     "skipLibCheck": true /* Skip type checking of declaration files. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
-  "files": [
-    "src/lcu.ts"
-  ]
+  "files": ["src/lcu.ts"]
 }
