--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
   "main": "./dist/lcu.js",
   "types": "./dist/lcu.d.ts",
   "scripts": {
-    "build": "tsc -p ."
+    "build": "tsc -p . --declaration"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "find-process": "^1.4.4",
+    "node-fetch": "^2.6.1",
     "ws": "^7.4.6"
   },
   "devDependencies": {
+    "@types/node-fetch": "^2.5.10",
     "@types/ws": "^7.4.4"
   }
 }
